GUI part without database commands

--- a/SummerProject/src/main/java/ProgramFrames/NewOpeningJFrame.form
+++ b/SummerProject/src/main/java/ProgramFrames/NewOpeningJFrame.form
@@ -24,7 +24,7 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabel4" min="-2" pref="1790" max="-2" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
@@ -32,12 +32,14 @@
                       <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace min="0" pref="18" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabel4" min="-2" pref="1160" max="-2" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
@@ -45,7 +47,6 @@
                       <Component id="jPanel1" min="-2" pref="520" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace min="0" pref="18" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -188,7 +189,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="-130" y="-60" width="720" height="670"/>
+              <AbsoluteConstraints x="-70" y="-60" width="720" height="670"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -197,7 +198,10 @@
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\MEHMETAKAN\Desktop\logMain.PNG"/>
+          <Image iconType="2" name="C:\Users\MEHMETAKAN\Desktop\log.png"/>
+        </Property>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[2560, 1440]"/>
         </Property>
       </Properties>
     </Component>
